--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@ footer .list a {
 ✔️ Audio ogohlantirish
 ✔️ Telefon va kompyuterda ishlaydi
 ✔️ Telegram, Instagram, Discord linklari bilan`,
-    link: "https://reyzer2112.github.io/Necha-kun-qoldi-/"
+    link: "https://reyzer2112.github.io/Necha-kun-qoldi/"
   },
   {
     number: "04",
@@ -808,3 +808,4 @@ function clickEffect(element) {
   </script>
 </body>
 </html>
+
