--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="uz">
 <head>
@@ -479,7 +478,7 @@ footer .list a {
     number: "01",
     title: "2048 O‘yini",
     description: "Salom hammaga! 👋Men o‘zim mustaqil tarzda 2048 o‘yini asosida websayt yaratdim. Sayt aynan kompyuter foydalanuvchilari uchun qulaylashtirilgan. 💻✨🔍 Asosiy xususiyatlar:⚡️ Tez ishlaydi va yengil interfeys⌨️ Oson boshqaruv (klaviatura bilan)🚫 Minimal reklama — maksimal o‘yin zavqi.",
-    link: "https://reyzer2112.github.io/ReyZer2112/"
+    link: "https://reyzer2112.github.io/2048-Oyini/"
   },
   {
     number: "02",
@@ -493,7 +492,7 @@ footer .list a {
 🌙 Tungi va kunduzgi rejim
 📊 G‘alaba va yutqazish statistikasi
 📖 So‘zlar ro‘yxati tugmasi.`,
-    link: "https://reyzer2112.github.io/Wordle-O-zbekcha/"
+    link: "https://reyzer2112.github.io/Wordle-Uzbekcha/"
   },
   {
     number: "03",
@@ -566,9 +565,32 @@ Omon qolish uchun aqlli va tezkor bo‘l!
 🏆 Har bir uchish yangi sarguzasht, qiyinchiliklar esa o‘yinni qiziqarli qiladi.  
 🎮 Do‘stlar bilan bellashish va rekordlarni solishtirish mumkin.`,
     link: "https://reyzer2112.github.io/FlappyBird/"
+  },
+
+{
+    number: "08",
+    title: "Tower Blocks",
+    description: `🧱 Tower Blocks – Brauzeringizda oddiy va qiziqarli minora qurish o‘yini!  
+Missiya: imkon qadar balandroq minora qurish, bloklarni aniq va tez joylashtirish.  
+🎯 Oddiy boshqaruv – faqat bitta tugma!  
+📱 Telefon, planshet yoki kompyuterda ishlaydi.  
+💡 Minimalistik dizayn, tez yuklanadi va hech qanday ro‘yxatdan o‘tish shart emas.  
+⚡ Refleks, aniqlik va tezkorlikni sinab ko‘ring, do‘stlaringiz bilan bellashish imkoniyati mavjud.`,
+    link: "https://reyzer2112.github.io/Tower-Blocks/"
+  },
+
+{
+    number: "09",
+    title: "AQILDAN OZGAN HAYDOVCHI",
+    description: `🚗 AQILDAN OZGAN HAYDOVCHI – 3D brauzer o‘yini, real fizika va tezlik hissi bilan!  
+Ushbu o‘yinda har bir burilish, to‘qnashuv va tezlanish haqiqiy hayotiy tajribaga yaqin.  
+💥 Har bir xato xavf tug‘diradi, lekin haqiqiy haydovchi hech qachon to‘xtamaydi.  
+⚡ Silliq va tezkor o‘yin jarayoni, interaktiv muhit va dinamik ob’ektlar bilan.  
+💻 Kompyuter uchun optimallashtirilgan, kuchli grafika va immersiv muhit.  
+🔊 Effektli ovozlar bilan haqiqiy haydovchilik tajribasi oling, do‘stlaringiz bilan rekordlar uchun bellashing!`,
+    link: "https://reyzer2112.github.io/Aqldan-Ozgan-Haydovchi/"
   }
 ];
-
 
   let current = 0;
 
@@ -808,4 +830,3 @@ function clickEffect(element) {
   </script>
 </body>
 </html>
-
